fixed terminal responsive issue on mobile.

--- a/src/app/components/experience/experience.css
+++ b/src/app/components/experience/experience.css
@@ -5,8 +5,7 @@
 }
 
 .experience .commandContainer {
-    position: absolute;
-    height: 100%;
+    height: 550px;
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
@@ -105,23 +104,27 @@
 @media only screen and (min-width: 768px) {
     .experience .commandContainer {
         height: 52%;
+        position: absolute;
     }
 }
 
 @media only screen and (min-width: 1024px) {
     .experience .commandContainer {
         height: 55%;
+        position: absolute;
     }
 }
 
 @media only screen and (min-width: 1140px) {
     .experience .commandContainer {
         height: 65%;
+        position: absolute;
     }
 }
 
 @media only screen and (min-width: 1140px) {
     .experience .commandContainer {
         height: 70%;
+        position: absolute;
     }
 }
