--- a/src/app/components/main/main.css
+++ b/src/app/components/main/main.css
@@ -1,5 +1,5 @@
 @media only screen and (max-width: 767px) {
-    .skills, .contact {
+    .skills, .experience, .contact {
         height: auto !important;
     }
 }
